hotfix: prevent profile display media from stretching

--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   user-select: none;
   aspect-ratio: 1/1;
+  flex-shrink: 0;
 }
 @keyframes fadeOut {
   from {
